Fixes for collapsable ToC

--- a/layouts/partials/scss/common/main.scss
+++ b/layouts/partials/scss/common/main.scss
@@ -92,7 +92,6 @@ $default-table-heading-background-colour: {{ default "$default-pre-background-co
 // mobile viewport settings
 
 $ctoc-bg-color: $default-container-background-color;
-$ctoc-default-transition: all .2s ease;
 
 $ctoc-off-canvas-height: 100%;
 $ctoc-off-canvas-width: 80%;
@@ -104,25 +103,7 @@ $hamburger-ctoc-width: 2em;
 $hamburger-ctoc-height: 2em;
 $hamburger-ctoc-z-index: 10;
 
-$ctoc-link-font-size: 1em;
-$ctoc-link-padding: .4em;
 $ctoc-link-font-color: $default-link-color;
 
 $ctoc-link-hover-bg-color: $default-hover-background-color;
 $ctoc-link-hover-font-color: $default-hover-color;
-
-$subctoc-left-margin: .2em;
-$subctoc-default-transition: all .3s ease;
-$subctoc-first-child-transition: all .5s ease;
-
-// desktop viewport settings
-
-$hamburger-ctoc-position-left: 20%;
-$hamburger-ctoc-transition-delay: 1s;
-$hamburger-ctoc-hover-transition-delay: .15s;
-$hamburger-ctoc-first-child-transition-delay: .5s;
-
-$ctoc-link-desktop-font-size: 1em;
-$ctoc-link-min-width: 8em;
-
-$subctoc-transition: visibility 0s linear .5s, opacity .5s cubic-bezier(1, 0, 58, 1);
