--- a/layouts/partials/scss/real-scss/default-body.scss
+++ b/layouts/partials/scss/real-scss/default-body.scss
@@ -155,6 +155,7 @@
   h2 {
     &:first-of-type {
       display: inline-block;
+      padding-left: .2em;
       vertical-align: top;
     }
   }
